@@ -20,6 +20,11 @@ AM_DISABLE_STATIC
 AM_PROG_LIBTOOL
 AC_PATH_XTRA
 AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
+AC_PATH_PROG(GTK_BUILDER_CONVERT, gtk-builder-convert, no)
+
+if test "x$GTK_BUILDER_CONVERT" = "xno"; then
+  AC_MSG_ERROR([gtk-builder-convert not found])
+fi
 
 AC_TYPE_PID_T
 AC_TYPE_SIGNAL
@@ -76,7 +81,7 @@ PKG_CHECK_MODULES(USER_SHARE, glib-2.0 >= 2.15.2 gtk+-2.0 gconf-2.0 dbus-glib-1 
 AC_SUBST(USER_SHARE_CFLAGS)
 AC_SUBST(USER_SHARE_LIBS)
 
-PKG_CHECK_MODULES(USER_SHARE_CONFIG, glib-2.0 >= 2.15.2 gtk+-2.0 >= 2.4.0 libglade-2.0 gconf-2.0)
+PKG_CHECK_MODULES(USER_SHARE_CONFIG, glib-2.0 >= 2.15.2 gtk+-2.0 >= 2.12.0 gconf-2.0)
 AC_SUBST(USER_SHARE_CONFIG_CFLAGS)
 AC_SUBST(USER_SHARE_CONFIG_LIBS)
 	
