@@ -1,3 +1,7 @@
+2008-03-08  Jaap Haitsma  <jaap@haitsma.org>
+
+	* POTFILES.skip: Add gnome-user-share-properties.ui
+
 2008-03-01  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation.
